// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CButtonClose renders correctly 1`] = `
<button
  aria-label="Close"
  class="c-close"
  type="button"
>
  ×
</button>
`;

exports[`CButtonClose renders correctly 2`] = `
<button
  aria-label="Close"
  class="c-close"
  disabled="disabled"
  style="color:red"
  type="button"
>
  ok
</button>
`;
